# Loctree

./: .gitignore  .loctignore  .replit  .semgrep.yaml  .semgrepignore  AI_README.md  CHANGELOG.md  CLAUDE.md  CLI_MIGRATION_PROPOSAL.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  build-landing.sh  loctree.mjs  loctree.py  loctree.sh  package.json  replit.md
.github/: HOMEBREW_SETUP.md
.vibecrafted/: GUIDELINES.md
Formula/: loctree.rb
ai-hooks/: README.md  example-settings.json  loct-grep-augment.sh  loct-smart-suggest.sh  memex-context.sh  memex-startup.sh  memory-on-compact.sh
distribution/: README.md
docs/: 01_homebrew_release.md  02_query_mode.md  03_runtime_apis.md  CONTRIBUTING.md  HOMEBREW_RELEASE.md  README.md  getting-started.md  help-text-improvements.md  python_improvements.md  refactor-strategist.md  search-tools-comparison.md
homebrew/: CHECKLIST.md  PR_TEMPLATE.md  loctree.rb
hooks/: pre-push
landing/: .replit  Cargo.toml  build.sh  index.html  replit.nix  rust-toolchain.toml  styles.css
landing-leptos/: index.html  styles.css
landing/.loctree/feat_false-positives-clearance@f8c5be1/: analysis.json  circular.json  report.html  report.sarif  snapshot.json
landing/api/agent/: index.json  index.txt
landing/public/: install.sh
landing/public/api/agent/: index.txt
landing/src/: main.rs
landing/src/components/: icons.rs
landing/src/pages/: blog.rs  docs.rs  features.rs  home.rs  mod.rs
landing/src/sections/: blog.rs  cli_reference.rs  easter_eggs.rs  features.rs  footer.rs  for_agents.rs  hero.rs  install.rs  manual.rs  mod.rs  nav.rs  slice_demo.rs  stack_detection.rs
landing/styles/: base.css  cli-reference.css  features.css  footer.css  for-agents.css  hero.css  install.css  main.css  nav.css  real-world.css  slice-demo.css  stack-detection.css
licenses/: THIRD_PARTY.md  landing.json  loctree_rs.json  reports.json
loc_tree_rs/: Cargo.toml
loctree_lsp/: Cargo.toml
loctree_lsp/src/: backend.rs  hover.rs  lib.rs  main.rs  navigation.rs  references.rs  snapshot.rs
loctree_lsp/src/actions/: mod.rs  quickfix.rs  refactor.rs
loctree_lsp/src/diagnostics/: cycles.rs  dead.rs  mod.rs  twins.rs
loctree_memex/: Cargo.toml
loctree_memex/src/: main.rs
loctree_rs/: Cargo.toml  DEAD_EXPORTS_TESTING_METHODOLOGY.md  LICENSE
loctree_rs/completions/: _loct  loct.bash
loctree_rs/docs/: memory-lint.md  react-lint.md  ts-lint.md
loctree_rs/src/: args.rs  colors.rs  config.rs  detect.rs  diff.rs  focuser.rs  fs_utils.rs  git.rs  impact.rs  jaq_query.rs  lib.rs  main.rs  memex.rs  progress.rs  query.rs  similarity.rs  slicer.rs  snapshot.rs  suppressions.rs  tree.rs  types.rs  watch.rs
loctree_rs/src/analyzer/: assets.rs  ast_js.rs  audit_report.rs  barrels.rs  classify.rs  coverage.rs  coverage_gaps.rs  css.rs  cycles.rs  dead_parrots.rs  dist.rs  dist_vlq.rs  entrypoints.rs  findings.rs  for_ai.rs  graph.rs  graph_bootstrap.js  health_score.rs  html.rs  html_analyzer.rs  insights.rs  js.rs  manifests.rs  memory_lint.rs  mod.rs  open_server.rs  output.rs  pipelines.rs  py.rs  react_lint.rs  regexes.rs  report.rs  resolvers.rs  root_scan.rs  runner.rs  rust.rs  sarif.rs  scan.rs  search.rs  test_coverage.rs  (+4 more)
loctree_rs/src/analyzer/ast_js/: calls.rs  config.rs  exports.rs  imports.rs  mod.rs  sfc.rs  template.rs  visitor.rs
loctree_rs/src/analyzer/crowd/: clustering.rs  mod.rs  output.rs  types.rs
loctree_rs/src/analyzer/dead_parrots/: filters.rs  languages.rs  mod.rs  output.rs  search.rs
loctree_rs/src/analyzer/py/: concurrency.rs  decorators.rs  dynamic.rs  exports.rs  helpers.rs  imports.rs  metadata.rs  mod.rs  stdlib.rs  usages.rs
loctree_rs/src/analyzer/rust/: imports.rs  mod.rs  preprocess.rs  usages.rs
loctree_rs/src/cli/: command.rs  dispatch.rs  entrypoint.rs  mod.rs  parser.rs
loctree_rs/src/cli/command/: global.rs  help.rs  help_texts.rs  mod.rs  options.rs  parsed.rs  types.rs
loctree_rs/src/cli/dispatch/: mod.rs
loctree_rs/src/cli/dispatch/handlers/: ai.rs  analysis.rs  analysis.rs.backup_1765932609  cache.rs  deprecation.rs  diff.rs  mod.rs  output.rs  query.rs  watch.rs
loctree_rs/src/cli/parser/: analysis_commands.rs  context_commands.rs  core.rs  helpers.rs  misc_commands.rs  mod.rs  output_commands.rs  scan_commands.rs  tauri_commands.rs
loctree_rs/src/refactor_plan/: mod.rs  output.rs
loctree_rs/tests/: agent_index_contract.rs  e2e_cli.rs
loctree_rs/tests/fixtures/simple_ts/.loctree/: snapshot.json
loctree_rs/tests/fixtures/tauri_app/.loctree/: snapshot.json
loctree_rs/tests/fixtures/tauri_app/src-tauri/: Cargo.toml
loctree_server/: Cargo.toml
loctree_server/src/: main.rs
reports/: Cargo.toml  README.md  TWINS_GRAPH_SUMMARY.md  basic_report.html  loct-find-compare-0.8.8-vs-0.8.9-dev.md  report.html  test-crowds-visualization.html  test-severity.html
reports/examples/: basic_report.rs  with_graph.rs
reports/src/: INTEGRATION_NOTES.md  TWINS_GRAPH_README.md  TWINS_INTEGRATION_GUIDE.md  crowds_graph.js  graph_bootstrap.js  lib.rs  styles.rs  twins_graph.js  twins_graph_demo_data.js  twins_graph_example.html  types.rs  wasm_loader.js
reports/src/components/: action_plan.rs  audit.rs  commands.rs  coverage.rs  crowds.rs  cycles.rs  dead_code.rs  dist.rs  document.rs  duplicates.rs  dynamic_imports.rs  for_ai.rs  graph.rs  health_gauge.rs  hub_files.rs  icons.rs  insights.rs  mod.rs  pipelines.rs  quick_commands.rs  refactor_plan.rs  section.rs  tabs.rs  tree.rs  twins.rs
reports/wasm/: Cargo.toml  build.sh
reports/wasm/assets/: report_wasm.js  wasm.b64
reports/wasm/src/: lib.rs
rmcp_memex/: .gitignore  .semgrep.yaml  CHANGELOG.md  Cargo.toml  README.md
rmcp_memex/scripts/: build-macos.sh  install.sh
rmcp_memex/src/: lib.rs
rmcp_memex/src/embeddings/: mod.rs
rmcp_memex/src/handlers/: mod.rs
rmcp_memex/src/rag/: mod.rs
rmcp_memex/src/storage/: mod.rs
rmcp_memex/src/tests/: memory.rs
rmcp_memex/src/tui/: app.rs  host_detection.rs  ui.rs
rmcp_memex/tools/: install-githooks.sh
rmcp_memex/tools/githooks/: pre-push
(+259 files in other folders)
