[workspace]
resolver = "2"
members = [
    "loctree_rs",
    "loctree-mcp",
    "loctree_lsp",
    "rmcp-common",
    "reports",
    "reports/wasm",
    # landing - excluded from public repo (development only in loctree-suite)
]

# Removed from workspace:
# - rmcp-memex: use crates.io version (0.3.2+), standalone: ~/Libraxis/rmcp-memex
# - rmcp-mux: deprecated (dead end approach)
# - rmcp-config-ui: moved to ~/Libraxis/rmcp-config-ui

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Loctree <loct@loctree.io>"]

[workspace.dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# MCP
rmcp = { version = "0.12", features = ["server"] }

# Async
futures = "0.3"

# The local crates (for inter-crate dependencies)
loctree = { path = "loctree_rs" }

# Release profile - good defaults for all crates
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# WASM crates need size optimization - override when building with trunk/wasm-pack
# trunk uses its own Trunk.toml for wasm-opt settings
