[package]
name = "loctree-landing"
version = "0.1.5"
edition = "2024"

[dependencies]
leptos = { version = "0.8.14", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "KeyboardEvent",
    "EventTarget",
    "console"
] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
