[package]
name = "loctree-landing"
version = "0.1.7"
edition = "2024"

[dependencies]
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window",
    "Navigator",
    "Clipboard",
    "Document",
    "Element",
    "HtmlElement",
    "DomTokenList",
    "KeyboardEvent",
    "EventTarget",
    "console"
] }

# Note: Release profile is in workspace root Cargo.toml
# WASM size optimization is handled by trunk/wasm-opt
