[package]
name = "loctree-lsp"
version = "0.1.2"
edition.workspace = true
description = "Language Server Protocol server for loctree"
license.workspace = true
authors.workspace = true

[[bin]]
name = "loctree-lsp"
path = "src/main.rs"

[dependencies]
tower-lsp = "0.20"
lsp-types = "0.95"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "sync", "io-std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
loctree = { path = "../loctree_rs" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
notify = "6"
dashmap = "5"
anyhow = "1"
