[package]
name = "loctree_memex"
version = "0.1.0"
edition = "2024"
authors = ["Loctree <loct@loctree.io>"]
description = "AI Memory integration for Loctree using rmcp_memex"
license = "MIT"

[dependencies]
# The core RAG/memory MCP server (now part of loctree monorepo)
rmcp-memex = { path = "../rmcp_memex" }

# Serialization & CLI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
