[package]
name = "loctree"
version = "0.5.2"
edition = "2024"
authors = ["LibraxisAI <the1st@whoai.am>"]
description = "Fast, language-aware codebase analyzer for detecting dead exports, circular imports, and generating dependency graphs"
license = "MIT"
repository = "https://github.com/LibraxisAI/Loctree"
readme = "../README.md"
keywords = ["static-analysis", "dead-code", "imports", "exports", "codebase"]
categories = ["development-tools", "command-line-utilities"]

[lib]
name = "loctree"
path = "src/lib.rs"

[[bin]]
name = "loctree"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json-five = "0.3"
regex = "1.12"
globset = "0.4"
heck = "0.5"
time = { version = "0.3", features = ["formatting"] }
report-leptos = { version = "0.1", path = "../reports" }
git2 = "0.19"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2.0"
predicates = "3.1"
