[package]
name = "report-wasm"
version = "0.1.0"
edition = "2021"
description = "WASM graph renderer for loctree reports using dot_ix"
license = "MIT"
publish = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Graph visualization - dot_ix for graphviz-style rendering
# Note: dot_ix version may need adjustment based on compatibility
# dot_ix = { version = "0.10", default-features = false }

# Logging
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"      # Optimize for size
lto = true
codegen-units = 1
panic = "abort"
strip = true
